   - Add build dependency on libssl-dev to fix a FTBFS because of missing
     -lssl at link time.
   - Add depends on python-glade2 for awn-manager, as it used glade for the UI.
     (Closes: #568253).
   - Remove python-elementtree from Build-Depends, only depend on
     python-all-dev as elementtree is already part of stdlib (Closes: #566995).
     Thanks Luca Falavigna for the patch.

 -- Julien Lavergne <gilir@ubuntu.com>  Sun, 07 Feb 2010 12:48:26 +0100

avant-window-navigator (0.3.2.1-4) unstable; urgency=low

  * debian/rules: Build python-awn for only 1 version of python.
    (Closes: #531176) 

 -- Julien Lavergne <julien.lavergne@gmail.com>  Wed, 17 Jun 2009 00:20:41 +0200

avant-window-navigator (0.3.2.1-3) unstable; urgency=medium

  * Rename preinst to python-awn.preinst to use it only on python-awn binary,
    really Closes: #530274
  * debian/control: Remove XS-Python-Version.

 -- Julien Lavergne <julien.lavergne@gmail.com>  Wed, 27 May 2009 20:23:57 +0200

avant-window-navigator (0.3.2.1-2) unstable; urgency=medium

  * debian/control: Use XS-Python-Version to avoid breakage during upgrade
    (Closes: #530274)

 -- Julien Lavergne <julien.lavergne@gmail.com>  Sat, 23 May 2009 22:23:41 +0200

avant-window-navigator (0.3.2.1-1) unstable; urgency=low

  * New Upstream Version.
  * debian/control
   - Remove depends on python-gnome2 and python-gnome2-desktop for 
     awn-manager, not needed anymore.
   - Add python-gtk2 as depends for python-awn.
   - Remove depends on avant-window-navigator for awn-manager to avoid 
     circular dependency. This is unnecessary until awn depends on awn-manager
     for the migration script. (Closes: #520120).
   - Add libgnome-desktop-dev and libdbus-glib-1-dev as depends for libawn-dev.
   - Switch from python-central to python-support.
   - Remove X{B,S}-Python-Version.
   - Bump build-depends on debhelper to (>= 7).
   - Remove build-depends on cdbs.
   - Build depends on quilt.
   - Add Vcs fields.